--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DBConnection"  :"Server=localhost\\SQLEXPRESS;Database=EmployeeDB;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
